--- a/src/PluginInstaller/PluginInstaller.csproj
+++ b/src/PluginInstaller/PluginInstaller.csproj
@@ -52,7 +52,6 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="InstalledList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpaceportInstaller.cs" />
@@ -81,6 +80,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InstallerCore\InstallerCore.csproj">
+      <Project>{4FBB9DDC-6E2F-4092-A679-E4B6574E7697}</Project>
+      <Name>InstallerCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
