Changed install to use local structure and not INI

--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IniWrapper.cs" />
-    <Compile Include="InstalledList.cs" />
+    <Compile Include="InstallFileList.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="InstallerEventArgs.cs" />
     <Compile Include="InstallerFile.cs" />
