--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -71,6 +71,11 @@
     <Compile Include="UpdateRunner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"C:\windows\system32\xcopy" "$(TargetPath)" "C:\Program Files\FlashDevelop\Plugins" /Y /Q
+"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)src\PluginInstaller\bin\Debug\files\Plugins" /Y /Q
+"C:\windows\system32\xcopy" "$(TargetPath)" "C:\Users\Null-Laptop\Desktop\Projects\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
