--- a/src/PluginUpdater/PluginUpdater.csproj
+++ b/src/PluginUpdater/PluginUpdater.csproj
@@ -56,6 +56,7 @@
       <HintPath>..\lib\PluginCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
