Broken branch commit

--- a/src/PluginUpdater/PluginUpdater.csproj
+++ b/src/PluginUpdater/PluginUpdater.csproj
@@ -63,6 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="UpdaterController.cs" />
     <Compile Include="UpdaterPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +84,12 @@
       <Project>{C93B6254-CDE3-4619-B386-29E1BF5E2BE5}</Project>
       <Name>SpaceportPlugin</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
