--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -62,15 +62,15 @@
   <ItemGroup>
     <Compile Include="ExtensionAttribute.cs" />
     <Compile Include="IniWrapper.cs" />
-    <Compile Include="InstallFileList.cs" />
-    <Compile Include="Installer.cs" />
-    <Compile Include="InstallerEventArgs.cs" />
-    <Compile Include="InstallerFile.cs" />
+    <Compile Include="Install\InstallFileList.cs" />
+    <Compile Include="Install\Installer.cs" />
+    <Compile Include="Install\InstallerEventArgs.cs" />
+    <Compile Include="Install\InstallerFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateCheckerEventArgs.cs" />
-    <Compile Include="UpdateDownloader.cs" />
-    <Compile Include="UpdateHelper.cs" />
-    <Compile Include="UpdateRunner.cs" />
+    <Compile Include="Update\UpdateCheckerEventArgs.cs" />
+    <Compile Include="Update\UpdateDownloader.cs" />
+    <Compile Include="Update\UpdateHelper.cs" />
+    <Compile Include="Update\UpdateRunner.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
