--- a/src/PluginCommon/PluginCommon.csproj
+++ b/src/PluginCommon/PluginCommon.csproj
@@ -58,9 +58,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"C:\windows\system32\xcopy" "$(TargetPath)" "C:\Program Files\FlashDevelop\Plugins" /Y /Q
-"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)src\PluginInstaller\bin\Debug\files\Plugins" /Y /Q
-"C:\windows\system32\xcopy" "$(TargetPath)" "C:\Users\Null-Laptop\Desktop\Projects\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q
+    <PostBuildEvent>"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)src\PluginInstaller\bin\Debug\files\Plugins" /Y /Q
+"C:\Users\NullSoldier\Desktop\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
