--- a/src/PluginUpdater/PluginUpdater.csproj
+++ b/src/PluginUpdater/PluginUpdater.csproj
@@ -62,6 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmPatch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPatch.Designer.cs">
+      <DependentUpon>frmPatch.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -86,6 +92,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmPatch.resx">
+      <DependentUpon>frmPatch.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
