--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtensionAttribute.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="IEnumerableHelper.cs" />
     <Compile Include="IniWrapper.cs" />
     <Compile Include="Install\InstallFileList.cs" />
