--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -84,7 +84,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\src\PluginInstaller\bin\Debug\files\Plugins" /Y /Q
+    <PostBuildEvent>"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\src\Installer\bin\Debug\files\Plugins" /Y /Q
 "C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\src\lib\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q
 
 "C:\windows\system32\xcopy" "$(TargetDir)Ionic.Zip.dll" "$(SolutionDir)\src\PluginInstaller\bin\Debug\files\Plugins" /Y /Q
