Refactored the Installer
- Started getting the installer ready for the new method of self-updating where it updates itself. So I moved everything into a new Entry class and moved a lot of logic out of frmMain
- Added ILMerge to the lib for use in merging the updater

--- a/src/PluginUpdater/PluginUpdater.csproj
+++ b/src/PluginUpdater/PluginUpdater.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InstallerLauncher.cs" />
+    <Compile Include="AssemblyLoader.cs" />
     <Compile Include="frmPatch.cs">
       <SubType>Form</SubType>
     </Compile>
