--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -81,10 +81,10 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\src\Installer\bin\Debug\files\Plugins" /Y /Q
-"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\src\lib\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q
+"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\lib\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q
 
 "C:\windows\system32\xcopy" "$(TargetDir)Ionic.Zip.dll" "$(SolutionDir)\src\PluginInstaller\bin\Debug\files\Plugins" /Y /Q
-"C:\windows\system32\xcopy" "$(TargetDir)Ionic.Zip.dll" "$(SolutionDir)\src\lib\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q</PostBuildEvent>
+"C:\windows\system32\xcopy" "$(TargetDir)Ionic.Zip.dll" "$(SolutionDir)\lib\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
