--- a/src/PluginUpdater/PluginUpdater.csproj
+++ b/src/PluginUpdater/PluginUpdater.csproj
@@ -62,8 +62,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InstallerLauncher.cs" />
-    <Compile Include="AssemblyLoader.cs" />
     <Compile Include="frmPatch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,7 +103,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)src\Installer\bin\Debug\files\Plugins\" /Y /Q
-"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\src\lib\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q</PostBuildEvent>
+"C:\windows\system32\xcopy" "$(TargetPath)" "$(SolutionDir)\lib\FlashDevelop\FlashDevelop\Bin\Debug\Plugins" /Y /Q</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
