--- a/src/Installer/App.config
+++ b/src/Installer/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>  
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-  </startup>
+    
+  <supportedRuntime version="v2.0.50727"/></startup>
 
   <runtime>
-    <shadowCopyVerifyByTimestamp enabled="true" />
+    <shadowCopyVerifyByTimestamp enabled="true"/>
   </runtime>
 </configuration>
