--- a/src/PluginSpaceport/PluginSpaceport.csproj
+++ b/src/PluginSpaceport/PluginSpaceport.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PluginCore">
-      <HintPath>..\lib\PluginCore.dll</HintPath>
+      <HintPath>..\..\lib\PluginCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
