--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -53,10 +53,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ionic.Zip">
-      <HintPath>..\lib\Ionic.Zip.dll</HintPath>
+      <HintPath>..\..\lib\Ionic.Zip.dll</HintPath>
     </Reference>
     <Reference Include="PluginCore">
-      <HintPath>..\lib\PluginCore.dll</HintPath>
+      <HintPath>..\..\lib\PluginCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
