--- a/src/PluginCommon/PluginCommon.csproj
+++ b/src/PluginCommon/PluginCommon.csproj
@@ -40,9 +40,8 @@
     <OutputPath>bin\x86\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PluginCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\PluginCore.dll</HintPath>
+    <Reference Include="PluginCore">
+      <HintPath>..\..\lib\PluginCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
