Fixed computer dependent build problems

--- a/src/Installer/Installer.csproj
+++ b/src/Installer/Installer.csproj
@@ -111,7 +111,7 @@
   <PropertyGroup>
     <PostBuildEvent>"$(TargetDir)\ILMerge" /target:winexe /out:PluginInstallerMerged.exe  PluginInstaller.exe Ionic.Zip.dll InstallerCore.dll
 
-call "$(SolutionDir)\tools\CopyILMerged.bat"</PostBuildEvent>
+call "$(SolutionDir)\tools\CopyIlMerged.bat" "$(SolutionDir)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
