Improved build scripts in tools/
- Merged create merged installer scripts and made it so it can be run either form the directory, or through post build
- Completely re-wrote the copy plugins script so it's a script that's run explicitly instead of at post build

--- a/src/Installer/Installer.csproj
+++ b/src/Installer/Installer.csproj
@@ -114,9 +114,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(TargetDir)\ILMerge" /target:winexe /out:PluginInstallerMerged.exe  PluginInstaller.exe Ionic.Zip.dll InstallerCore.dll
-
-call "$(SolutionDir)\tools\CopyIlMerged.bat" "$(SolutionDir)"</PostBuildEvent>
+    <PostBuildEvent>call "$(SolutionDir)\tools\CreateMergedInstaller.bat" "$(SolutionDir)\tools"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
