--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -55,6 +55,9 @@
     <Reference Include="Ionic.Zip">
       <HintPath>..\..\lib\Ionic.Zip.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\..\lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="PluginCore">
       <HintPath>..\..\lib\PluginCore.dll</HintPath>
     </Reference>
