--- a/src/InstallerCore/InstallerCore.csproj
+++ b/src/InstallerCore/InstallerCore.csproj
@@ -75,7 +75,10 @@
     <Compile Include="Install\InstallerFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extractor\UpdateExtractor.cs" />
+    <Compile Include="Rollback\GenericEventArgs.cs" />
     <Compile Include="Rollback\IRevertableAction.cs" />
+    <Compile Include="Rollback\RevertableActionFailedException.cs" />
+    <Compile Include="Rollback\RevertableExceptionAction.cs" />
     <Compile Include="Rollback\RevertableFileCopy.cs" />
     <Compile Include="Rollback\RevertableTransaction.cs" />
     <Compile Include="Update\UpdateCheckerEventArgs.cs" />
