SPWrapper now reflects new SP interface
- Moved an auto deploy function that picks the right command for the SIM
  or wifi target depending on the platform into an SPHelper
- Flash launch is now prevented if you don't have it checked

--- a/src/PluginSpaceport/PluginSpaceport.csproj
+++ b/src/PluginSpaceport/PluginSpaceport.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="EventRouter.cs" />
     <Compile Include="Helpers\EnumerableHelper.cs" />
+    <Compile Include="Helpers\SPHelper.cs" />
     <Compile Include="Helpers\TargetHelper.cs" />
     <Compile Include="Observable\IObservable.cs" />
     <Compile Include="Observable\IObserver.cs" />
