The plugin now disables during relevent situations
The whole plugin will disable itself if a non AS3 project is opened. That
way, if you press Test and you're not dealing with an AS3 project then the
spaceport plugin won't hijack "TEST" access. I still need to make it so if
Spaceport plugin fails to load correctly then it will disable as well.

--- a/src/PluginSpaceport/PluginSpaceport.csproj
+++ b/src/PluginSpaceport/PluginSpaceport.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Observable\IObservable.cs" />
     <Compile Include="Observable\IObserver.cs" />
     <Compile Include="Observable\Unsubscriber.cs" />
+    <Compile Include="SPPluginEvents.cs" />
     <Compile Include="SPWrapper.cs" />
     <Compile Include="SPDeviceWatcher.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
