--- a/src/Launchpad/Launchpad.csproj
+++ b/src/Launchpad/Launchpad.csproj
@@ -37,6 +37,9 @@
     <Reference Include="ProjectManager">
       <HintPath>..\..\lib\ProjectManager.dll</HintPath>
     </Reference>
+    <Reference Include="SwfOp">
+      <HintPath>..\..\lib\SwfOp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -46,7 +49,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EventRouter.cs" />
-    <Compile Include="ExtensionAttribute.cs" />
     <Compile Include="Helpers\Check.cs" />
     <Compile Include="Helpers\SPHelper.cs" />
     <Compile Include="Helpers\TargetHelper.cs" />
@@ -135,7 +137,7 @@
     <None Include="Resources\page_white_flash.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\InstallerCore\UpdaterCore.csproj">
+    <ProjectReference Include="..\UpdaterCore\UpdaterCore.csproj">
       <Project>{4fbb9ddc-6e2f-4092-a679-e4b6574e7697}</Project>
       <Name>UpdaterCore</Name>
     </ProjectReference>
@@ -146,7 +148,8 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>call "$(SolutionDir)tools\CopyPlugins.bat" "$(SolutionDir)tools\"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
